--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -51,6 +51,17 @@
         android:layout_marginTop="15dp"
         android:text=""
         android:textSize="20sp" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/logoutBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Kijelentkezés"
+        android:layout_centerHorizontal="true"
+        android:textAllCaps="false"
+        android:layout_below="@+id/profile_progressBar"
+        android:background="@drawable/custom_button"
+        android:textColor="#FFFFFF"/>
     <!--
         <Button
             android:id="@+id/firestoreBtn"
