--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:showIn="navigation_view">
+
 
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_profile"
             android:icon="@drawable/profile"
             android:title="Profil" />
+        <item
+            android:id="@+id/nav_planning"
+            android:icon="@drawable/calendar_white"
+            android:title="Tervezés" />
         <item
             android:id="@+id/nav_exercises"
             android:icon="@drawable/weight"
@@ -20,10 +26,6 @@
             android:id="@+id/nav_vitamin"
             android:icon="@drawable/vitamin"
             android:title="Vitamin" />
-        <item
-            android:id="@+id/nav_reminder"
-            android:icon="@drawable/reminder"
-            android:title="Emlékeztető" />
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/setting"
