--- a/app/src/main/res/layout/activity_repetitions.xml
+++ b/app/src/main/res/layout/activity_repetitions.xml
@@ -26,7 +26,7 @@
         tools:layout_editor_absoluteY="1dp" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/addToWorkoutTemplateBtn"
+        android:id="@+id/repetitionAddBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/repetitionExerciseRv"
