--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -29,7 +29,7 @@
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/setting"
-            android:title="Beállítások" />
+            android:title="Gépek-Beállítások" />
 
     </group>
 
