Added enable fields(Et visibility) option on the popmenu v20

--- a/app/src/main/res/menu/popup_menu.xml
+++ b/app/src/main/res/menu/popup_menu.xml
@@ -3,6 +3,9 @@
 
 
     <item
+        android:id="@+id/action_popup_enable"
+        android:title="Enable fields" />
+    <item
         android:id="@+id/action_popup_edit"
         android:title="Edit" />
     <item
