Added expandable layout to the exercises page

--- a/app/src/main/res/layout/exercises_item.xml
+++ b/app/src/main/res/layout/exercises_item.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:id="@+id/excercises_row_item_mainlayout">
 
 
     <TextView
@@ -12,18 +14,37 @@
         android:layout_marginTop="20dp"
         android:gravity="center"
         android:text="Gyakorlat neve"
-        android:textSize="16sp" />
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/excercises_row_item_mgroup_tv"
-        android:layout_width="100dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/excercises_row_item_name_tv"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="20dp"
         android:gravity="center"
         android:text="Izomcsoport:"
-        android:textSize="16sp" />
+        android:textSize="18sp" />
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/expandablelayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/excercises_row_item_mgroup_tv">
+
+        <TextView
+            android:id="@+id/excercises_row_item_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Leírás: "
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 
 </RelativeLayout>
