--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -62,6 +62,15 @@
         android:layout_below="@+id/profile_progressBar"
         android:background="@drawable/custom_button"
         android:textColor="#FFFFFF"/>
+
+    <Button
+        android:id="@+id/logBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        android:layout_below="@+id/logoutBtn"/>
+
+
     <!--
         <Button
             android:id="@+id/firestoreBtn"
