--- a/app/src/main/res/layout/fragment_workout.xml
+++ b/app/src/main/res/layout/fragment_workout.xml
@@ -23,11 +23,11 @@
         android:textAllCaps="false"
         android:layout_centerInParent="true"
         android:layout_marginTop="50dp"
-        android:layout_below="@+id/templateLv"
+        android:layout_below="@+id/templateRv"
         />
 
-    <ListView
-        android:id="@+id/templateLv"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/templateRv"
         android:layout_width="match_parent"
         android:layout_height="335dp"
         android:layout_below="@id/templateTitle" />
