Added enested recyclerview with adapter, xml file, but the displaying order is bad on the templates page ...

--- a/app/src/main/res/layout/workout_template_row_item.xml
+++ b/app/src/main/res/layout/workout_template_row_item.xml
@@ -13,6 +13,7 @@
         android:textSize="24sp"/>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/memberRv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/workoutTemplate_rowitem_titleTv"/>
