The profile picture now is loaded in the navigationheader and on the ProfileFragment as well

--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -8,7 +8,7 @@
     android:gravity="bottom"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <ImageView
+    <com.example.fitnesshelper.CircularImageView
         android:id="@+id/IV"
         android:layout_width="60dp"
         android:layout_height="60dp"
