--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -52,6 +52,7 @@
         android:text=""
         android:textSize="20sp" />
 
+    <!--
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/logoutBtn"
         android:layout_width="wrap_content"
@@ -63,13 +64,15 @@
         android:textAllCaps="false"
         android:textColor="#FFFFFF" />
 
+
+
     <Button
         android:id="@+id/logBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
-        android:layout_below="@+id/logoutBtn"/>
-
+        android:layout_below="@+id/logoutBtn"
+        android:text="Button" />
+    -->
 
     <!--
         <Button
