--- a/app/src/main/res/layout/fragment_vitamin.xml
+++ b/app/src/main/res/layout/fragment_vitamin.xml
@@ -10,17 +10,18 @@
         android:layout_centerHorizontal="true"
         android:text="Vitamin"
         android:textSize="30sp" />
+
     <Button
         android:id="@+id/vitaminTimePickerBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Idő"
-        android:layout_centerInParent="true"
-        android:textSize="20sp"
-        android:textAllCaps="false"
         android:layout_centerHorizontal="true"
-        />
+        android:layout_below="@+id/alarmTv"
+        android:text="Idő"
+        android:textAllCaps="false"
+        android:textSize="20sp" />
 
+    <!--
     <Chronometer
         android:id="@+id/chronometer"
         android:layout_width="wrap_content"
@@ -32,9 +33,9 @@
         android:id="@+id/startBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Start"
+        android:layout_below="@+id/alarmTv"
         android:layout_toEndOf="@+id/chronometer"
-        android:layout_below="@+id/alarmTv"/>
+        android:text="Start" />
 
     <Button
         android:id="@+id/pauseBtn"
@@ -51,7 +52,7 @@
         android:text="Reset"
         android:layout_toEndOf="@+id/pauseBtn"
         android:layout_below="@+id/alarmTv"/>
-
+    -->
 
     <TextView
         android:id="@+id/alarmTv"
@@ -59,20 +60,26 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/vitaminTitleTv"
         android:layout_centerInParent="true"
-        android:layout_marginTop="100dp"
         android:text="Nincs időzítő beállítva"
-        android:textSize="20sp" />
+        android:textSize="16sp" />
 
+    <!--
     <Button
         android:id="@+id/cancelBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_centerInParent="true"
-        android:textSize="20sp"
+        android:layout_marginTop="70dp"
+        android:layout_toRightOf="@id/vitaminTimePickerBtn"
+        android:text="kikapcsolás"
         android:textAllCaps="false"
-        android:layout_below="@+id/vitaminTimePickerBtn"
-        android:text="Időzítő kikapcsolása" />
+        android:textSize="16sp" />
+        -->
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/vitaminRv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/vitaminTimePickerBtn" />
 
 
 </RelativeLayout>
