--- a/app/src/main/res/menu/fmdetails_popup_menu.xml
+++ b/app/src/main/res/menu/fmdetails_popup_menu.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-
-    <item
-        android:id="@+id/action_popup_enable"
-        android:title="Szerkesztés" />
     <item
         android:id="@+id/action_popup_edit"
+        android:title="Szerkesztés" />
+    <item
+        android:id="@+id/action_popup_save"
         android:title="Mentés" />
     <item
         android:id="@+id/action_popup_delete"
