--- a/app/src/main/res/layout/workout_template_row_item.xml
+++ b/app/src/main/res/layout/workout_template_row_item.xml
@@ -1,22 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
 
     <TextView
         android:id="@+id/workoutTemplate_rowitem_titleTv"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:text="TextView"
         android:layout_marginTop="10dp"
         android:textSize="24sp"/>
 
+    <ImageView
+        android:id="@+id/workoutTemplate_rowitem_optionsIv"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        app:srcCompat="@drawable/ic_options"
+        android:layout_toEndOf="@+id/workoutTemplate_rowitem_titleTv"
+        android:layout_marginLeft="180dp"
+        android:layout_marginTop="10dp"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/memberRv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/workoutTemplate_rowitem_titleTv"/>
+        android:layout_below="@id/workoutTemplate_rowitem_titleTv" />
 
     <!--
     <TextView
