Tried to create the second (nested/member) adapter but the time was not enough to see the results, but i prepared the data at least on StartWorkout activity

--- a/app/src/main/res/layout/member_row_item.xml
+++ b/app/src/main/res/layout/member_row_item.xml
@@ -8,8 +8,8 @@
         android:id="@+id/member_row_repnumberTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="10dp"
+        android:text="TextView" />
 
     <TextView
         android:id="@+id/member_row_excnameTv"
