random commit, StartWorkout is created, you can start a workout now (nested recyclerview with adapters...), plus added information popup xml with machines, modified Vitamin notification item..., added picture to exercises....

--- a/app/src/main/res/layout/activity_start_workout.xml
+++ b/app/src/main/res/layout/activity_start_workout.xml
@@ -10,12 +10,33 @@
         android:id="@+id/startWorkout_titleTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Logolás"
+        android:layout_centerHorizontal="true"
+        android:textSize="22sp"
+        android:text="sablon neve"
         />
+
+    <Chronometer
+        android:id="@+id/chronometer"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginLeft="70dp"
+        android:layout_toEndOf="@+id/startWorkout_titleTv"
+        android:textSize="22sp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/startWorkoutRv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/startWorkout_titleTv"/>
+        android:layout_height="500dp"
+        android:layout_below="@+id/startWorkout_titleTv" />
+
+
+    <Button
+        android:id="@+id/start_workout_row_item_finishBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Edzés vége"
+        android:layout_centerHorizontal="true"
+        android:textAllCaps="false"
+        android:layout_below="@+id/startWorkoutRv"/>
+
 </RelativeLayout>
