--- a/app/src/main/res/layout/exercises_item.xml
+++ b/app/src/main/res/layout/exercises_item.xml
@@ -6,6 +6,12 @@
     android:id="@+id/excercises_row_item_mainlayout">
 
 
+    <ImageView
+        android:id="@+id/excercises_row_iconIV"
+        android:layout_width="96dp"
+        android:layout_height="69dp"
+        app:srcCompat="@drawable/ic_launcher_foreground" />
+
     <TextView
         android:id="@+id/excercises_row_item_name_tv"
         android:layout_width="wrap_content"
@@ -13,6 +19,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
         android:gravity="center"
+        android:layout_toEndOf="@+id/excercises_row_iconIV"
         android:text="Gyakorlat neve"
         android:textSize="18sp" />
 
@@ -21,6 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/excercises_row_item_name_tv"
+        android:layout_toEndOf="@+id/excercises_row_iconIV"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="20dp"
         android:gravity="center"
