--- a/app/src/main/res/layout/start_workout_row_item.xml
+++ b/app/src/main/res/layout/start_workout_row_item.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-
+    <!--
     <TextView
         android:id="@+id/start_workout_row_item_repnumberTv"
         android:layout_width="wrap_content"
@@ -12,7 +13,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
         android:textSize="20sp"/>
-
+    -->
     <TextView
         android:id="@+id/start_workout_row_item_excnameTv"
         android:layout_width="wrap_content"
@@ -20,12 +21,34 @@
         android:text="TextView"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="50dp"
-        android:textSize="20sp"
-        android:layout_toRightOf="@+id/start_workout_row_item_repnumberTv"/>
+        android:textSize="18sp"
+        />
+
+    <ImageView
+        android:id="@+id/start_workout_row_item_optionsIv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_options"
+        android:layout_toRightOf="@+id/start_workout_row_item_excnameTv"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="20dp"/>
+
+    <ImageView
+        android:id="@+id/startworkout_repetition_item_infoIv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_toEndOf="@+id/start_workout_row_item_optionsIv"
+        app:srcCompat="@drawable/ic_info" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/start_workout_row_item_Rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/start_workout_row_item_repnumberTv"/>
+        android:layout_below="@id/start_workout_row_item_excnameTv">
+
+    </androidx.recyclerview.widget.RecyclerView>
+
+
 </RelativeLayout>
